# pitch-detection

./: CMakeLists.txt  Dockerfile
include/: pitch_detection.h
src/: autocorrelation.cpp  hmm.cpp  mpm.cpp  yin.cpp
